@@ -1,6 +1,7 @@
 ver 0.22.2 (not yet released)
 * database
-  - simple: purge virtual directories for unavailable plugins on update
+  - simple: purge songs and virtual directories for unavailable plugins
+    on update
 
 ver 0.22.1 (2020/10/17)
 * decoder
